Test Sandbox Project/src/objects/TML_Answer_Sequence_Item__c.object
<CustomObject>
    <description>Answer Sequence Item template. Records in this object are used by template answer sequence records</description>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Correct_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>Answer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TML_Answer_Sequence__c</fullName>
        <label>TML Answer Sequence</label>
        <referenceTo>TML_Answer_Sequence__c</referenceTo>
        <relationshipLabel>TML Answer Sequence Items</relationshipLabel>
        <relationshipName>TML_Answer_Sequence_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>TML Answer Sequence Item</label>
    <nameField>
        <displayFormat>TLASI-{0000000}</displayFormat>
        <label>TML Answer Sequence Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TML Answer Sequence Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>item_id_specia_chars_validation</fullName>
        <active>true</active>
        <description>Prevent special characters in item id</description>
        <errorConditionFormula>CONTAINS( Item_Id__c ,&quot;;&quot;)</errorConditionFormula>
        <errorDisplayField>Item_Id__c</errorDisplayField>
        <errorMessage>Item Id contains un-supported special characters, please update the item id</errorMessage>
    </validationRules>
</CustomObject>